connect business server with business logic